Enabled more aggressive optimizations for all apps and libs

--- a/project/jni/application/alienblaster/AndroidAppSettings.cfg
+++ b/project/jni/application/alienblaster/AndroidAppSettings.cfg
@@ -23,7 +23,7 @@ AppVersionCode=110013
 AppVersionName="1.1.0.13 - fixed crashes for some devices"
 CompiledLibraries="sdl_mixer sdl_image"
 CustomBuildScript=n
-AppCflags='-finline-functions -O2'
+AppCflags='-O3'
 AppLdflags=''
 AppSubdirsBuild=''
 AppUseCrystaXToolchain=n
