--- a/project/jni/application/enigma/AndroidAppSettings.cfg
+++ b/project/jni/application/enigma/AndroidAppSettings.cfg
@@ -23,7 +23,7 @@ AppVersionCode=1
 AppVersionName="0.1"
 CompiledLibraries="sdl_mixer sdl_image sdl_ttf intl lua png xerces"
 CustomBuildScript=n
-AppCflags='-finline-functions -O2'
+AppCflags='-Os'
 AppLdflags=''
 AppSubdirsBuild=''
 AppUseCrystaXToolchain=y
