--- a/project/jni/application/opentyrian/AndroidAppSettings.cfg
+++ b/project/jni/application/opentyrian/AndroidAppSettings.cfg
@@ -23,7 +23,7 @@ AppVersionCode=2116
 AppVersionName="2.1.16 - fixed crashes for some devices"
 CompiledLibraries="sdl_net"
 CustomBuildScript=n
-AppCflags='-finline-functions -O2'
+AppCflags='-O3'
 AppLdflags=''
 AppSubdirsBuild=''
 AppUseCrystaXToolchain=n
