Pachi: fixed menu text not shown on G1

--- a/project/jni/application/pachi/AndroidAppSettings.cfg
+++ b/project/jni/application/pachi/AndroidAppSettings.cfg
@@ -23,7 +23,7 @@ AppVersionCode=103
 AppVersionName="1.03 - fixed monsters not shown on HTC G1"
 CompiledLibraries="sdl_mixer"
 CustomBuildScript=n
-AppCflags='-O2 -finline-functions'
+AppCflags='-O2 -finline-functions -Wno-write-strings'
 AppLdflags=''
 AppSubdirsBuild=''
 AppUseCrystaXToolchain=n
