Screen keyboard text input can be disabled through ChangeAppSettings, also it will hide screen joystick if it's not required, but key amount > 0

--- a/project/jni/application/sc2/AndroidAppSettings.cfg
+++ b/project/jni/application/sc2/AndroidAppSettings.cfg
@@ -1,5 +1,5 @@
 # The application settings for Android libSDL port
-AppSettingVersion=12
+AppSettingVersion=13
 LibSdlVersion=1.2
 AppName="Ur-Quan Masters"
 AppFullName=com.sourceforge.sc2
@@ -11,6 +11,7 @@ SdlVideoResizeKeepAspect=n
 NeedDepthBuffer=n
 AppUsesMouse=n
 AppNeedsArrowKeys=y
+AppNeedsTextInput=y
 AppUsesJoystick=y
 AppHandlesJoystickSensitivity=n
 AppUsesMultitouch=n
