--- a/project/jni/application/pachi/AndroidAppSettings.cfg
+++ b/project/jni/application/pachi/AndroidAppSettings.cfg
@@ -1,5 +1,5 @@
 # The application settings for Android libSDL port
-AppSettingVersion=12
+AppSettingVersion=14
 LibSdlVersion=1.2
 AppName="Pachi el marciano"
 AppFullName=net.sourceforge.dragontech.pachi
@@ -10,7 +10,9 @@ SdlVideoResize=y
 SdlVideoResizeKeepAspect=n
 NeedDepthBuffer=n
 AppUsesMouse=n
+AppNeedsTwoButtonMouse=n
 AppNeedsArrowKeys=y
+AppNeedsTextInput=y
 AppUsesJoystick=n
 AppHandlesJoystickSensitivity=n
 AppUsesMultitouch=n
