ScummVM: tweaked key layout

--- a/project/jni/application/scummvm/AndroidAppSettings.cfg
+++ b/project/jni/application/scummvm/AndroidAppSettings.cfg
@@ -17,7 +17,7 @@ AppUsesJoystick=n
 AppHandlesJoystickSensitivity=n
 AppUsesMultitouch=n
 NonBlockingSwapBuffers=n
-RedefinedKeys="LALT F7 ESCAPE F11 ESCAPE F11 ESCAPE"
+RedefinedKeys="LALT RETURN ESCAPE F11 ESCAPE F11 F5 RETURN DELETE F7 F7"
 AppTouchscreenKeyboardKeysAmount=0
 AppTouchscreenKeyboardKeysAmountAutoFire=0
 MultiABI=n
