Added audio to GAV

--- a/project/jni/application/gav/AndroidAppSettings.cfg
+++ b/project/jni/application/gav/AndroidAppSettings.cfg
@@ -25,7 +25,7 @@ AppVersionCode=12001
 AppVersionName="2.2.01"
 CompiledLibraries="jpeg png sdl_image sdl_net"
 CustomBuildScript=n
-AppCflags=''
+AppCflags='-DAUDIO'
 AppLdflags=''
 AppSubdirsBuild=''
 AppUseCrystaXToolchain=y
