Fixed keys in REminiscence

--- a/project/jni/application/REminiscence/AndroidAppSettings.cfg
+++ b/project/jni/application/REminiscence/AndroidAppSettings.cfg
@@ -1,5 +1,5 @@
 # The application settings for Android libSDL port
-AppSettingVersion=14
+AppSettingVersion=15
 LibSdlVersion=1.2
 AppName="REminiscence"
 AppFullName=fr.freecyxdown.sdl
@@ -17,7 +17,7 @@ AppUsesJoystick=n
 AppHandlesJoystickSensitivity=n
 AppUsesMultitouch=n
 NonBlockingSwapBuffers=n
-RedefinedKeys="RETURN RSHIFT BACKSPACE RETURN RSHIFT"
+RedefinedKeys="RETURN RSHIFT BACKSPACE RETURN SPACE"
 AppTouchscreenKeyboardKeysAmount=3
 AppTouchscreenKeyboardKeysAmountAutoFire=0
 MultiABI=n
@@ -29,4 +29,5 @@ AppCflags='-Dmain=SDL_main -DBYPASS_PROTECTION'
 AppLdflags=''
 AppSubdirsBuild=''
 AppUseCrystaXToolchain=n
+AppCmdline=''
 ReadmeText='^You may press "Home" now - the data will be downloaded in background'
