Another fix for REminiscence

--- a/project/jni/application/REminiscence/AndroidAppSettings.cfg
+++ b/project/jni/application/REminiscence/AndroidAppSettings.cfg
@@ -9,7 +9,7 @@ AppDataDownloadUrl="Data files size is 1 Mb|http://anddev.at.ua/data/reminiscenc
 SdlVideoResize=y
 SdlVideoResizeKeepAspect=n
 NeedDepthBuffer=n
-AppUsesMouse=y
+AppUsesMouse=n
 AppNeedsTwoButtonMouse=n
 AppNeedsArrowKeys=y
 AppNeedsTextInput=y
@@ -17,7 +17,7 @@ AppUsesJoystick=n
 AppHandlesJoystickSensitivity=n
 AppUsesMultitouch=n
 NonBlockingSwapBuffers=n
-RedefinedKeys="RETURN RSHIFT BACKSPACE RETURN SPACE"
+RedefinedKeys="RSHIFT RETURN BACKSPACE RETURN SPACE"
 AppTouchscreenKeyboardKeysAmount=3
 AppTouchscreenKeyboardKeysAmountAutoFire=0
 MultiABI=n
