Some fies to FreeHeroes2

--- a/project/jni/application/fheroes2/AndroidAppSettings.cfg
+++ b/project/jni/application/fheroes2/AndroidAppSettings.cfg
@@ -2,10 +2,10 @@
 AppSettingVersion=15
 LibSdlVersion=1.2
 AppName="Free Heroes 2"
-AppFullName=com.googlecode.fheroes2
+AppFullName=net.sourceforge.fheroes2
 ScreenOrientation=h
 InhibitSuspend=n
-AppDataDownloadUrl="Game data|keys.zip"
+AppDataDownloadUrl="Game data|data.zip^MIDI music support|http://sourceforge.net/projects/libsdl-android/files/timidity.zip/download"
 SdlVideoResize=y
 SdlVideoResizeKeepAspect=n
 NeedDepthBuffer=n
@@ -23,9 +23,9 @@ AppTouchscreenKeyboardKeysAmountAutoFire=0
 MultiABI=n
 AppVersionCode=100
 AppVersionName="1.0.0"
-CompiledLibraries="sdl_net sdl_mixer sdl_image png"
+CompiledLibraries="sdl_net sdl_mixer sdl_image sdl_ttf png intl"
 CustomBuildScript=n
-AppCflags='-fexceptions -finline-functions -O2 -DWITH_ZLIB -DWITH_MIXER -DWITH_NET -DWITH_XML -DWITH_IMAGE'
+AppCflags='-fexceptions -finline-functions -O2 -DWITH_ZLIB -DWITH_MIXER -DWITH_NET -DWITH_XML -DWITH_IMAGE -DWITH_TTF'
 AppLdflags=''
 AppSubdirsBuild=''
 AppUseCrystaXToolchain=y
