Fixed SDL 1.2 compilation, force screen update when "Show screen under finger" selected and user releases finger

--- a/project/jni/application/fheroes2/AndroidAppSettings.cfg
+++ b/project/jni/application/fheroes2/AndroidAppSettings.cfg
@@ -5,7 +5,7 @@ AppName="Free Heroes 2"
 AppFullName=net.sourceforge.fheroes2
 ScreenOrientation=h
 InhibitSuspend=n
-AppDataDownloadUrl="Game data|data.zip^MIDI music support|http://sourceforge.net/projects/libsdl-android/files/timidity.zip/download"
+AppDataDownloadUrl="Game data|data.zip^MIDI music support (18 Mb)|http://sourceforge.net/projects/libsdl-android/files/timidity.zip/download"
 SdlVideoResize=y
 SdlVideoResizeKeepAspect=n
 NeedDepthBuffer=n
