Fixed FHeroes2 icon

--- a/project/jni/application/fheroes2/AndroidAppSettings.cfg
+++ b/project/jni/application/fheroes2/AndroidAppSettings.cfg
@@ -29,5 +29,5 @@ AppCflags='-fexceptions -finline-functions -O2 -DWITH_ZLIB -DWITH_MIXER -DWITH_N
 AppLdflags=''
 AppSubdirsBuild=''
 AppUseCrystaXToolchain=y
-AppCmdline='fheroes -d'
+AppCmdline='fheroes2 -d'
 ReadmeText='^You may press "Home" now - the data will be downloaded in background'
