Fixed build via scripts, tried to disable certificates check for https:// but failed - please make sure all your downloads using http:// scheme or do not install any certs

--- a/project/jni/application/openttd/AndroidAppSettings.cfg
+++ b/project/jni/application/openttd/AndroidAppSettings.cfg
@@ -5,12 +5,12 @@ AppName="OpenTTD"
 AppFullName=org.openttd.sdl
 ScreenOrientation=h
 InhibitSuspend=n
-AppDataDownloadUrl="Data files size is 19 Mb|https://sites.google.com/site/andgamdev/openttd-1.0.4-data.zip?attredirects=0&d=1/download^OpenTTD fonts 4MB|https://sites.google.com/site/andgamdev/openttd-1.0.4-fonts-data.zip?attredirects=0&d=1^MIDI music support (18 Mb)|http://sourceforge.net/projects/libsdl-android/files/timidity.zip/download"
+AppDataDownloadUrl="Data files size is 19 Mb|http://sites.google.com/site/andgamdev/openttd-1.0.4-data.zip?attredirects=0&d=1^OpenTTD fonts 4MB|http://sites.google.com/site/andgamdev/openttd-1.0.4-fonts-data.zip?attredirects=0&d=1^MIDI music support (18 Mb)|http://sourceforge.net/projects/libsdl-android/files/timidity.zip/download"
 SdlVideoResize=y
 SdlVideoResizeKeepAspect=n
 NeedDepthBuffer=n
 AppUsesMouse=y
-AppNeedsTwoButtonMouse=n
+AppNeedsTwoButtonMouse=y
 AppNeedsArrowKeys=y
 AppNeedsTextInput=y
 AppUsesJoystick=n
