Updated ScummVM project

--- a/project/jni/application/scummvm/AndroidAppSettings.cfg
+++ b/project/jni/application/scummvm/AndroidAppSettings.cfg
@@ -1,5 +1,5 @@
 # The application settings for Android libSDL port
-AppSettingVersion=14
+AppSettingVersion=15
 LibSdlVersion=1.2
 AppName="ScummVM"
 AppFullName=org.scummvm.sdl
@@ -29,4 +29,5 @@ AppCflags=''
 AppLdflags=''
 AppSubdirsBuild=''
 AppUseCrystaXToolchain=n
+AppCmdline=''
 ReadmeText='^You may press "Home" now - the data will be downloaded in background'
