--- a/project/jni/application/openttd/AndroidAppSettings.cfg
+++ b/project/jni/application/openttd/AndroidAppSettings.cfg
@@ -29,5 +29,5 @@ AppCflags=''
 AppLdflags=''
 AppSubdirsBuild=''
 AppUseCrystaXToolchain=y
-AppCmdline='openttd'
+AppCmdline='openttd -d 3'
 ReadmeText='^You may press "Home" now - the data will be downloaded in background'
