Added openttd-lowmem project

--- a/project/jni/application/openttd-lowmem/AndroidAppSettings.cfg
+++ b/project/jni/application/openttd-lowmem/AndroidAppSettings.cfg
@@ -1,11 +1,11 @@
 # The application settings for Android libSDL port
 AppSettingVersion=15
 LibSdlVersion=1.2
-AppName="OpenTTD"
-AppFullName=org.openttd.sdl
+AppName="OpenTTD-lowmem"
+AppFullName=org.openttd.sdl.lowmem
 ScreenOrientation=h
 InhibitSuspend=n
-AppDataDownloadUrl="Data files - 20 Mb|http://sourceforge.net/projects/libsdl-android/files/OpenTTD/openttd-data-4.zip/download^Localization files and fonts (7 MB)|http://sourceforge.net/projects/libsdl-android/files/OpenTTD/openttd-lang-4.zip/download^MIDI music support (18 Mb)|http://sourceforge.net/projects/libsdl-android/files/timidity.zip/download^Big GUI add-on - enable it in NewGRF Settings|:data/opengfx+biggui.grf:http://www.tt-forums.net/download/file.php?id=135095"
+AppDataDownloadUrl="Data files - 6 Mb|http://sourceforge.net/projects/libsdl-android/files/OpenTTD/openttd-data-lowmem-2.zip/download^Big GUI add-on - enable it in NewGRF Settings|:data/opengfx+biggui.grf:http://www.tt-forums.net/download/file.php?id=135095"
 SdlVideoResize=y
 SdlVideoResizeKeepAspect=n
 NeedDepthBuffer=n
@@ -23,11 +23,11 @@ AppTouchscreenKeyboardKeysAmountAutoFire=0
 MultiABI=n
 AppVersionCode=10503
 AppVersionName="1.0.5.03"
-CompiledLibraries="jpeg png freetype timidity lzma lzo2"
+CompiledLibraries="png lzo2"
 CustomBuildScript=y
 AppCflags=''
 AppLdflags=''
 AppSubdirsBuild=''
 AppUseCrystaXToolchain=y
-AppCmdline='openttd -d 3'
+AppCmdline='openttd -d 3 -b 8bpp-simple'
 ReadmeText='^You may press "Home" now - the data will be downloaded in background'
