More random fixes

--- a/project/jni/application/openttd/AndroidAppSettings.cfg
+++ b/project/jni/application/openttd/AndroidAppSettings.cfg
@@ -17,7 +17,7 @@ AppUsesJoystick=n
 AppHandlesJoystickSensitivity=n
 AppUsesMultitouch=n
 NonBlockingSwapBuffers=n
-RedefinedKeys="LALT RETURN KP_PLUS KP_MINUS DELETE"
+RedefinedKeys="LALT RETURN KP_PLUS KP_MINUS DELETE ESCAPE"
 AppTouchscreenKeyboardKeysAmount=0
 AppTouchscreenKeyboardKeysAmountAutoFire=0
 MultiABI=n
