WARNING: SDL 1.3 won't compile! All SDL events now pushed from main SDL thread - this fixes some GFX problems in point-and-click games like OpenTTD.

--- a/project/jni/application/fheroes2/AndroidAppSettings.cfg
+++ b/project/jni/application/fheroes2/AndroidAppSettings.cfg
@@ -25,9 +25,9 @@ AppVersionCode=100
 AppVersionName="1.0.0"
 CompiledLibraries="sdl_net sdl_mixer sdl_image sdl_ttf png intl"
 CustomBuildScript=n
-AppCflags='-fexceptions -finline-functions -O2 -DWITH_ZLIB -DWITH_MIXER -DWITH_NET -DWITH_XML -DWITH_IMAGE -DWITH_TTF -DAI_EMPTY'
+AppCflags='-finline-functions -O2 -DWITH_ZLIB -DWITH_MIXER -DWITH_NET -DWITH_XML -DWITH_IMAGE -DWITH_TTF -DAI_EMPTY'
 AppLdflags=''
 AppSubdirsBuild='fheroes2/src/engine/* fheroes2/src/fheroes2/* fheroes2/src/xmlccwrap/*'
-AppUseCrystaXToolchain=y
+AppUseCrystaXToolchain=n
 AppCmdline='fheroes2 -d'
 ReadmeText='^You may press "Home" now - the data will be downloaded in background'
