--- a/project/jni/application/vice/AndroidAppSettings.cfg
+++ b/project/jni/application/vice/AndroidAppSettings.cfg
@@ -5,7 +5,7 @@ AppName="ViceC64"
 AppFullName=org.viceteam.sdl
 ScreenOrientation=h
 InhibitSuspend=n
-AppDataDownloadUrl="Data files size is 1 Mb|http://anddev.at.ua/data/vice-data.zip?attredirects=0&d=1"
+AppDataDownloadUrl="Data size is 1 Mb|vice-data.zip"
 SdlVideoResize=y
 SdlVideoResizeKeepAspect=n
 NeedDepthBuffer=n
@@ -17,17 +17,17 @@ AppUsesJoystick=n
 AppHandlesJoystickSensitivity=n
 AppUsesMultitouch=n
 NonBlockingSwapBuffers=n
-RedefinedKeys="LALT RETURN KP_PLUS KP_MINUS LCTRL"
-AppTouchscreenKeyboardKeysAmount=3
+RedefinedKeys="LCTRL RETURN KP_PLUS KP_MINUS LCTRL"
+AppTouchscreenKeyboardKeysAmount=4
 AppTouchscreenKeyboardKeysAmountAutoFire=0
 MultiABI=n
-AppVersionCode=12001
-AppVersionName="2.2.01"
+AppVersionCode=22001
+AppVersionName="svn23185"
 CompiledLibraries="jpeg png"
 CustomBuildScript=y
 AppCflags=''
 AppLdflags=''
 AppSubdirsBuild=''
 AppUseCrystaXToolchain=n
-AppCmdline='/sdcard/app-data/org.viceteam.sdl/vice -sdlcustomw 480 -sdlcustomh 320 -sdllimitmode 1 -menukey 306'
+AppCmdline='/sdcard/app-data/org.viceteam.sdl/vice -sdlcustomw 320 -sdlcustomh 240 -sdllimitmode 1 -menukey 306'
 ReadmeText='^You may press "Home" now - the data will be downloaded in background'
