--- a/project/jni/application/fheroes2/AndroidAppSettings.cfg
+++ b/project/jni/application/fheroes2/AndroidAppSettings.cfg
@@ -27,7 +27,7 @@ CompiledLibraries="sdl_net sdl_mixer sdl_image sdl_ttf png intl"
 CustomBuildScript=n
 AppCflags='-finline-functions -O2 -DWITH_ZLIB -DWITH_MIXER -DWITH_XML -DWITH_IMAGE -DWITH_TTF'
 AppLdflags=''
-AppSubdirsBuild='fheroes2/src/engine/* fheroes2/src/fheroes2/* fheroes2/src/xmlccwrap/* fheroes2-ai/*'
+AppSubdirsBuild='fheroes2/src/engine/* fheroes2/src/fheroes2/* fheroes2/src/xmlccwrap/* fheroes2-ai'
 AppUseCrystaXToolchain=n
 AppCmdline='fheroes2 -d'
 ReadmeText='^You may press "Home" now - the data will be downloaded in background'
