--- a/project/jni/application/fheroes2/AndroidAppSettings.cfg
+++ b/project/jni/application/fheroes2/AndroidAppSettings.cfg
@@ -25,9 +25,9 @@ AppVersionCode=208302
 AppVersionName="2083.02"
 CompiledLibraries="sdl_net sdl_mixer sdl_image sdl_ttf png intl"
 CustomBuildScript=n
-AppCflags='-finline-functions -O2 -DWITH_ZLIB -DWITH_MIXER -DWITH_XML -DWITH_IMAGE -DWITH_TTF'
+AppCflags='-finline-functions -O2 -DWITH_ZLIB -DWITH_MIXER -DWITH_XML -DWITH_IMAGE -DWITH_TTF -DBUILD_RELEASE'
 AppLdflags=''
 AppSubdirsBuild='fheroes2/src/engine/* fheroes2/src/fheroes2/* fheroes2/src/xmlccwrap/* fheroes2-ai'
 AppUseCrystaXToolchain=n
-AppCmdline='fheroes2 -d'
+AppCmdline='fheroes2'
 ReadmeText='^You may press "Home" now - the data will be downloaded in background'
