--- a/project/jni/application/fheroes2/AndroidAppSettings.cfg
+++ b/project/jni/application/fheroes2/AndroidAppSettings.cfg
@@ -11,7 +11,7 @@ SdlVideoResizeKeepAspect=n
 NeedDepthBuffer=n
 AppUsesMouse=y
 AppNeedsTwoButtonMouse=y
-AppNeedsArrowKeys=n
+AppNeedsArrowKeys=y
 AppNeedsTextInput=y
 AppUsesJoystick=n
 AppHandlesJoystickSensitivity=n
