--- a/project/jni/application/teeworlds/AndroidAppSettings.cfg
+++ b/project/jni/application/teeworlds/AndroidAppSettings.cfg
@@ -1,5 +1,5 @@
 # The application settings for Android libSDL port
-AppSettingVersion=12
+AppSettingVersion=15
 LibSdlVersion=1.2
 AppName="TeeWorlds"
 AppFullName=com.teeworlds
@@ -10,7 +10,9 @@ SdlVideoResize=n
 SdlVideoResizeKeepAspect=n
 NeedDepthBuffer=n
 AppUsesMouse=y
+AppNeedsTwoButtonMouse=y
 AppNeedsArrowKeys=y
+AppNeedsTextInput=y
 AppUsesJoystick=n
 AppHandlesJoystickSensitivity=n
 AppUsesMultitouch=n
@@ -19,12 +21,13 @@ RedefinedKeys="SPACE RETURN LEFT RIGHT LSHIFT ESCAPE RSHIFT LSHIFT"
 AppTouchscreenKeyboardKeysAmount=6
 AppTouchscreenKeyboardKeysAmountAutoFire=0
 MultiABI=y
-AppVersionCode=5203
-AppVersionName="0.5.2.03 - fixed crashes for some devices"
+AppVersionCode=5204
+AppVersionName="0.5.2.04"
 CompiledLibraries="sdl_image freetype"
 CustomBuildScript=n
 AppCflags='-O3'
 AppLdflags=''
 AppSubdirsBuild=''
 AppUseCrystaXToolchain=n
+AppCmdline=''
 ReadmeText='^You may press "Home" now - the data will be downloaded in background'
