Configurable speed and accel to move mouse with joystick

--- a/project/jni/application/fheroes2/AndroidAppSettings.cfg
+++ b/project/jni/application/fheroes2/AndroidAppSettings.cfg
@@ -21,13 +21,13 @@ RedefinedKeys="LCTRL m t h e"
 AppTouchscreenKeyboardKeysAmount=0
 AppTouchscreenKeyboardKeysAmountAutoFire=0
 MultiABI=n
-AppVersionCode=209704
-AppVersionName="2097.04"
+AppVersionCode=211205
+AppVersionName="2112.05"
 CompiledLibraries="sdl_net sdl_mixer sdl_image sdl_ttf png intl"
 CustomBuildScript=n
-AppCflags='-finline-functions -O2 -DWITH_ZLIB -DWITH_MIXER -DWITH_XML -DWITH_IMAGE -DWITH_TTF -DBUILD_RELEASE'
+AppCflags='-finline-functions -O2 -DWITH_ZLIB -DWITH_MIXER -DWITH_XML -DWITH_IMAGE -DWITH_TTF'
 AppLdflags=''
 AppSubdirsBuild='fheroes2/src/engine/* fheroes2/src/fheroes2/* fheroes2/src/xmlccwrap/* fheroes2-ai'
 AppUseCrystaXToolchain=n
-AppCmdline='fheroes2'
+AppCmdline='fheroes2 -d 500'
 ReadmeText='^You may press "Home" now - the data will be downloaded in background'
