Menu for editing on-screen controls, not finished yet!

--- a/project/jni/application/fheroes2/AndroidAppSettings.cfg
+++ b/project/jni/application/fheroes2/AndroidAppSettings.cfg
@@ -1,5 +1,5 @@
 # The application settings for Android libSDL port
-AppSettingVersion=15
+AppSettingVersion=16
 LibSdlVersion=1.2
 AppName="Free Heroes 2"
 AppFullName=net.sourceforge.fheroes2
@@ -17,12 +17,13 @@ AppUsesJoystick=n
 AppHandlesJoystickSensitivity=n
 AppUsesMultitouch=n
 NonBlockingSwapBuffers=n
-RedefinedKeys="LCTRL m t h e"
+RedefinedKeys="LCTRL M T H E"
 AppTouchscreenKeyboardKeysAmount=0
 AppTouchscreenKeyboardKeysAmountAutoFire=0
+RedefinedKeysScreenKb="LCTRL M T H"
 MultiABI=n
-AppVersionCode=212506
-AppVersionName="2125.06"
+AppVersionCode=214607
+AppVersionName="2146.07"
 CompiledLibraries="sdl_net sdl_mixer sdl_image sdl_ttf png intl"
 CustomBuildScript=n
 AppCflags='-finline-functions -O2 -DWITH_ZLIB -DWITH_MIXER -DWITH_XML -DWITH_IMAGE -DWITH_TTF'
