Fixed per-pixel alpha in keyboard themes

--- a/project/jni/application/ballfield/AndroidAppSettings.cfg
+++ b/project/jni/application/ballfield/AndroidAppSettings.cfg
@@ -1,5 +1,5 @@
 # The application settings for Android libSDL port
-AppSettingVersion=12
+AppSettingVersion=16
 LibSdlVersion=1.2
 AppName="Ballfield"
 AppFullName=net.olofson.ballfield
@@ -10,14 +10,17 @@ SdlVideoResize=y
 SdlVideoResizeKeepAspect=n
 NeedDepthBuffer=n
 AppUsesMouse=n
-AppNeedsArrowKeys=n
+AppNeedsTwoButtonMouse=n
+AppNeedsArrowKeys=y
+AppNeedsTextInput=y
 AppUsesJoystick=n
 AppHandlesJoystickSensitivity=n
 AppUsesMultitouch=n
 NonBlockingSwapBuffers=n
 RedefinedKeys="SPACE RETURN"
-AppTouchscreenKeyboardKeysAmount=1
-AppTouchscreenKeyboardKeysAmountAutoFire=0
+AppTouchscreenKeyboardKeysAmount=7
+AppTouchscreenKeyboardKeysAmountAutoFire=2
+RedefinedKeysScreenKb="SPACE RETURN"
 MultiABI=n
 AppVersionCode=101
 AppVersionName="1.01"
@@ -27,4 +30,5 @@ AppCflags='-O2 -finline-functions'
 AppLdflags=''
 AppSubdirsBuild=''
 AppUseCrystaXToolchain=n
+AppCmdline=''
 ReadmeText='^'
