Moved mouse config into separate group in config menu

--- a/project/jni/application/ballfield/AndroidAppSettings.cfg
+++ b/project/jni/application/ballfield/AndroidAppSettings.cfg
@@ -9,11 +9,11 @@ AppDataDownloadUrl="Game data is 1 Mb|ballfield.zip"
 SdlVideoResize=y
 SdlVideoResizeKeepAspect=n
 NeedDepthBuffer=n
-AppUsesMouse=n
-AppNeedsTwoButtonMouse=n
+AppUsesMouse=y
+AppNeedsTwoButtonMouse=y
 AppNeedsArrowKeys=y
 AppNeedsTextInput=y
-AppUsesJoystick=n
+AppUsesJoystick=y
 AppHandlesJoystickSensitivity=n
 AppUsesMultitouch=n
 NonBlockingSwapBuffers=n
