Transparency option for on-screen keyboard, also swapped joystick axis as it is used this way in most games

--- a/project/jni/application/ballfield/AndroidAppSettings.cfg
+++ b/project/jni/application/ballfield/AndroidAppSettings.cfg
@@ -13,7 +13,7 @@ AppUsesMouse=y
 AppNeedsTwoButtonMouse=y
 AppNeedsArrowKeys=y
 AppNeedsTextInput=y
-AppUsesJoystick=y
+AppUsesJoystick=n
 AppHandlesJoystickSensitivity=n
 AppUsesMultitouch=n
 NonBlockingSwapBuffers=n
