Small update to on-screen keyboaqrd defaults

--- a/project/jni/application/opentyrian/AndroidAppSettings.cfg
+++ b/project/jni/application/opentyrian/AndroidAppSettings.cfg
@@ -1,5 +1,5 @@
 # The application settings for Android libSDL port
-AppSettingVersion=12
+AppSettingVersion=16
 LibSdlVersion=1.2
 AppName="OpenTyrian"
 AppFullName=com.googlecode.opentyrian
@@ -10,7 +10,9 @@ SdlVideoResize=y
 SdlVideoResizeKeepAspect=n
 NeedDepthBuffer=n
 AppUsesMouse=y
+AppNeedsTwoButtonMouse=n
 AppNeedsArrowKeys=y
+AppNeedsTextInput=y
 AppUsesJoystick=n
 AppHandlesJoystickSensitivity=n
 AppUsesMultitouch=n
@@ -18,6 +20,7 @@ NonBlockingSwapBuffers=n
 RedefinedKeys="SPACE RETURN LCTRL LALT SPACE"
 AppTouchscreenKeyboardKeysAmount=4
 AppTouchscreenKeyboardKeysAmountAutoFire=1
+RedefinedKeysScreenKb="SPACE RETURN LCTRL LALT"
 MultiABI=n
 AppVersionCode=2116
 AppVersionName="2.1.16 - fixed crashes for some devices"
@@ -27,4 +30,5 @@ AppCflags='-O3'
 AppLdflags=''
 AppSubdirsBuild=''
 AppUseCrystaXToolchain=n
+AppCmdline=''
 ReadmeText='^You may press "Home" now - the data will be downloaded in background'
