--- a/project/jni/application/opentyrian/AndroidAppSettings.cfg
+++ b/project/jni/application/opentyrian/AndroidAppSettings.cfg
@@ -5,7 +5,7 @@ AppName="OpenTyrian"
 AppFullName=com.googlecode.opentyrian
 ScreenOrientation=h
 InhibitSuspend=n
-AppDataDownloadUrl="Data files size is 11 Mb|http://sourceforge.net/projects/libsdl-android/files/OpenTyrian/tyrian21-data.zip/download|http://sites.google.com/site/xpelyax/Home/tyrian21-data.zip?attredirects=0&d=1|http://sitesproxy.goapk.com/site/xpelyax/Home/tyrian21-data.zip"
+AppDataDownloadUrl="Data files size is 11 Mb|tyrian21-data.zip|http://sourceforge.net/projects/libsdl-android/files/OpenTyrian/tyrian21-data.zip/download|http://sites.google.com/site/xpelyax/Home/tyrian21-data.zip?attredirects=0&d=1|http://sitesproxy.goapk.com/site/xpelyax/Home/tyrian21-data.zip"
 SdlVideoResize=y
 SdlVideoResizeKeepAspect=n
 NeedDepthBuffer=n
