--- a/project/jni/application/ballfield/AndroidAppSettings.cfg
+++ b/project/jni/application/ballfield/AndroidAppSettings.cfg
@@ -17,10 +17,10 @@ AppUsesJoystick=n
 AppHandlesJoystickSensitivity=n
 AppUsesMultitouch=n
 NonBlockingSwapBuffers=n
-RedefinedKeys="SPACE RETURN"
+RedefinedKeys="SPACE"
 AppTouchscreenKeyboardKeysAmount=6
 AppTouchscreenKeyboardKeysAmountAutoFire=2
-RedefinedKeysScreenKb="SPACE RETURN"
+RedefinedKeysScreenKb="1 2 3 4 5 6 1 2 3 4"
 MultiABI=n
 AppVersionCode=101
 AppVersionName="1.01"
