--- a/project/jni/application/openttd-lowmem/AndroidAppSettings.cfg
+++ b/project/jni/application/openttd-lowmem/AndroidAppSettings.cfg
@@ -1,5 +1,5 @@
 # The application settings for Android libSDL port
-AppSettingVersion=15
+AppSettingVersion=16
 LibSdlVersion=1.2
 AppName="OpenTTD-lowmem"
 AppFullName=org.openttd.sdl.lowmem
@@ -20,9 +20,10 @@ NonBlockingSwapBuffers=n
 RedefinedKeys="LALT RETURN KP_PLUS KP_MINUS DELETE"
 AppTouchscreenKeyboardKeysAmount=0
 AppTouchscreenKeyboardKeysAmountAutoFire=0
+RedefinedKeysScreenKb="LALT RETURN KP_PLUS KP_MINUS SPACE DELETE KP_PLUS KP_MINUS 1 2"
 MultiABI=n
-AppVersionCode=10506
-AppVersionName="1.0.5.06"
+AppVersionCode=10507
+AppVersionName="1.0.5.07"
 CompiledLibraries="png lzo2"
 CustomBuildScript=y
 AppCflags=''
