--- a/project/jni/application/ltris-1.0.15/AndroidAppSettings.cfg
+++ b/project/jni/application/ltris-1.0.15/AndroidAppSettings.cfg
@@ -9,16 +9,16 @@ AppDataDownloadUrl="App data size is 1 Mb|data.zip"
 SdlVideoResize=y
 SdlVideoResizeKeepAspect=y
 NeedDepthBuffer=n
-AppUsesMouse=y
+AppUsesMouse=n
 AppNeedsTwoButtonMouse=y
-AppNeedsArrowKeys=n
+AppNeedsArrowKeys=y
 AppNeedsTextInput=y
 AppUsesJoystick=n
 AppHandlesJoystickSensitivity=n
 AppUsesMultitouch=n
 NonBlockingSwapBuffers=y
 RedefinedKeys="RETURN SPACE PAGEUP PAGEDOWN"
-AppTouchscreenKeyboardKeysAmount=0
+AppTouchscreenKeyboardKeysAmount=1
 AppTouchscreenKeyboardKeysAmountAutoFire=0
 RedefinedKeysScreenKb="RETURN SPACE PAGEUP PAGEDOWN"
 MultiABI=n
