Editable data download path/application curdir, editable app commandline, updated teadme

--- a/project/jni/application/REminiscence/AndroidAppSettings.cfg
+++ b/project/jni/application/REminiscence/AndroidAppSettings.cfg
@@ -1,5 +1,5 @@
 # The application settings for Android libSDL port
-AppSettingVersion=15
+AppSettingVersion=16
 LibSdlVersion=1.2
 AppName="REminiscence"
 AppFullName=fr.freecyxdown.sdl
@@ -20,6 +20,7 @@ NonBlockingSwapBuffers=n
 RedefinedKeys="RSHIFT RETURN BACKSPACE RETURN SPACE"
 AppTouchscreenKeyboardKeysAmount=3
 AppTouchscreenKeyboardKeysAmountAutoFire=0
+RedefinedKeysScreenKb="RSHIFT RETURN BACKSPACE RETURN SPACE"
 MultiABI=n
 AppVersionCode=01901
 AppVersionName="0.1.9"
