--- a/project/jni/application/alienblaster/AndroidAppSettings.cfg
+++ b/project/jni/application/alienblaster/AndroidAppSettings.cfg
@@ -1,5 +1,5 @@
 # The application settings for Android libSDL port
-AppSettingVersion=15
+AppSettingVersion=16
 LibSdlVersion=1.3
 AppName="Alien Blaster"
 AppFullName=de.schwardtnet.alienblaster
@@ -20,6 +20,7 @@ NonBlockingSwapBuffers=n
 RedefinedKeys="RETURN LCTRL PAGEUP PAGEDOWN LCTRL"
 AppTouchscreenKeyboardKeysAmount=4
 AppTouchscreenKeyboardKeysAmountAutoFire=1
+RedefinedKeysScreenKb="RETURN LCTRL PAGEUP PAGEDOWN LCTRL"
 MultiABI=n
 AppVersionCode=110013
 AppVersionName="1.1.0.13 - fixed crashes for some devices"
