--- a/project/jni/application/sc2/AndroidAppSettings.cfg
+++ b/project/jni/application/sc2/AndroidAppSettings.cfg
@@ -1,5 +1,5 @@
 # The application settings for Android libSDL port
-AppSettingVersion=15
+AppSettingVersion=16
 LibSdlVersion=1.2
 AppName="Ur-Quan Masters"
 AppFullName=com.sourceforge.sc2
@@ -20,9 +20,10 @@ NonBlockingSwapBuffers=n
 RedefinedKeys="RETURN RSHIFT KP_PLUS KP_MINUS RCTRL F10"
 AppTouchscreenKeyboardKeysAmount=2
 AppTouchscreenKeyboardKeysAmountAutoFire=0
+RedefinedKeysScreenKb="RETURN RSHIFT KP_PLUS KP_MINUS RCTRL F10"
 MultiABI=n
-AppVersionCode=06919
-AppVersionName="0.6.9.19"
+AppVersionCode=06920
+AppVersionName="0.6.9.20"
 CompiledLibraries="sdl_image tremor ogg"
 CustomBuildScript=n
 AppCflags='-O3 -DTHREADLIB_SDL=1 -DTIMELIB=SDL -DOVCODEC_TREMOR=1 -DNETPLAY=1 -DHAVE_REGEX=1 -DHAVE_GETOPT_LONG=1 -DHAVE_ZIP=1 -DHAVE_JOYSTICK=1'
