Updated project files for many apps

--- a/project/jni/application/alienblaster/AndroidAppSettings.cfg
+++ b/project/jni/application/alienblaster/AndroidAppSettings.cfg
@@ -22,8 +22,8 @@ AppTouchscreenKeyboardKeysAmount=4
 AppTouchscreenKeyboardKeysAmountAutoFire=1
 RedefinedKeysScreenKb="RETURN LCTRL PAGEUP PAGEDOWN LCTRL"
 MultiABI=n
-AppVersionCode=110013
-AppVersionName="1.1.0.13 - fixed crashes for some devices"
+AppVersionCode=110014
+AppVersionName="1.1.0.14"
 CompiledLibraries="sdl_mixer sdl_image"
 CustomBuildScript=n
 AppCflags='-O3'
