--- a/project/jni/application/opentyrian/AndroidAppSettings.cfg
+++ b/project/jni/application/opentyrian/AndroidAppSettings.cfg
@@ -22,8 +22,8 @@ AppTouchscreenKeyboardKeysAmount=4
 AppTouchscreenKeyboardKeysAmountAutoFire=1
 RedefinedKeysScreenKb="SPACE RETURN LCTRL LALT"
 MultiABI=n
-AppVersionCode=2116
-AppVersionName="2.1.16 - fixed crashes for some devices"
+AppVersionCode=2117
+AppVersionName="2.1.17"
 CompiledLibraries="sdl_net"
 CustomBuildScript=n
 AppCflags='-O3'
