--- a/project/jni/application/pachi/AndroidAppSettings.cfg
+++ b/project/jni/application/pachi/AndroidAppSettings.cfg
@@ -1,5 +1,5 @@
 # The application settings for Android libSDL port
-AppSettingVersion=14
+AppSettingVersion=16
 LibSdlVersion=1.2
 AppName="Pachi el marciano"
 AppFullName=net.sourceforge.dragontech.pachi
@@ -20,13 +20,15 @@ NonBlockingSwapBuffers=n
 RedefinedKeys="SPACE RETURN"
 AppTouchscreenKeyboardKeysAmount=1
 AppTouchscreenKeyboardKeysAmountAutoFire=0
+RedefinedKeysScreenKb="SPACE RETURN"
 MultiABI=n
-AppVersionCode=103
-AppVersionName="1.03 - fixed monsters not shown on HTC G1"
+AppVersionCode=104
+AppVersionName="1.04"
 CompiledLibraries="sdl_mixer"
 CustomBuildScript=n
 AppCflags='-O2 -finline-functions -Wno-write-strings'
 AppLdflags=''
 AppSubdirsBuild=''
 AppUseCrystaXToolchain=n
+AppCmdline=''
 ReadmeText='^You may press "Home" now - the data will be downloaded in background'
