--- a/project/jni/application/teeworlds/AndroidAppSettings.cfg
+++ b/project/jni/application/teeworlds/AndroidAppSettings.cfg
@@ -1,5 +1,5 @@
 # The application settings for Android libSDL port
-AppSettingVersion=15
+AppSettingVersion=16
 LibSdlVersion=1.2
 AppName="TeeWorlds"
 AppFullName=com.teeworlds
@@ -20,9 +20,10 @@ NonBlockingSwapBuffers=n
 RedefinedKeys="SPACE RETURN LEFT RIGHT LSHIFT ESCAPE RSHIFT LSHIFT"
 AppTouchscreenKeyboardKeysAmount=6
 AppTouchscreenKeyboardKeysAmountAutoFire=0
+RedefinedKeysScreenKb="SPACE RETURN LEFT RIGHT RSHIFT LSHIFT"
 MultiABI=y
-AppVersionCode=5204
-AppVersionName="0.5.2.04"
+AppVersionCode=5205
+AppVersionName="0.5.2.05"
 CompiledLibraries="sdl_image freetype"
 CustomBuildScript=n
 AppCflags='-O3'
