--- a/project/jni/application/ballfield/AndroidAppSettings.cfg
+++ b/project/jni/application/ballfield/AndroidAppSettings.cfg
@@ -24,7 +24,7 @@ RedefinedKeysScreenKb="1 2 3 4 5 6 1 2 3 4"
 MultiABI=n
 AppVersionCode=101
 AppVersionName="1.01"
-CompiledLibraries="sdl_mixer sdl_image"
+CompiledLibraries="sdl_mixer sdl_image curl"
 CustomBuildScript=n
 AppCflags='-O2 -finline-functions'
 AppLdflags=''
