--- a/project/jni/application/glxgears/AndroidAppSettings.cfg
+++ b/project/jni/application/glxgears/AndroidAppSettings.cfg
@@ -1,6 +1,6 @@
 # The application settings for Android libSDL port
-AppSettingVersion=15
-LibSdlVersion=1.3
+AppSettingVersion=16
+LibSdlVersion=1.2
 AppName="GLXGears"
 AppFullName=org.opengl.glxgears
 ScreenOrientation=h
@@ -20,6 +20,7 @@ NonBlockingSwapBuffers=n
 RedefinedKeys="RETURN"
 AppTouchscreenKeyboardKeysAmount=0
 AppTouchscreenKeyboardKeysAmountAutoFire=0
+RedefinedKeysScreenKb="RETURN"
 MultiABI=n
 AppVersionCode=1
 AppVersionName="1"
