Added fake stdin/stdout/stderr streams, to prevent crashes on some tablets

--- a/project/jni/application/scummvm/AndroidAppSettings.cfg
+++ b/project/jni/application/scummvm/AndroidAppSettings.cfg
@@ -1,5 +1,5 @@
 # The application settings for Android libSDL port
-AppSettingVersion=15
+AppSettingVersion=16
 LibSdlVersion=1.2
 AppName="ScummVM"
 AppFullName=org.scummvm.sdl
@@ -20,9 +20,10 @@ NonBlockingSwapBuffers=n
 RedefinedKeys="LALT RETURN ESCAPE F7 ESCAPE F5 F5 RETURN DELETE F7 F7"
 AppTouchscreenKeyboardKeysAmount=0
 AppTouchscreenKeyboardKeysAmountAutoFire=0
+RedefinedKeysScreenKb="LALT RETURN ESCAPE F7"
 MultiABI=n
-AppVersionCode=12001
-AppVersionName="1.2.0.01"
+AppVersionCode=12102
+AppVersionName="1.2.1.02"
 CompiledLibraries="mad tremor flac ogg jpeg png fluidsynth"
 CustomBuildScript=y
 AppCflags=''
