Implemented clicking with tap and timeout

--- a/project/jni/application/ballfield/AndroidAppSettings.cfg
+++ b/project/jni/application/ballfield/AndroidAppSettings.cfg
@@ -11,15 +11,15 @@ SdlVideoResizeKeepAspect=n
 NeedDepthBuffer=n
 AppUsesMouse=y
 AppNeedsTwoButtonMouse=y
-AppNeedsArrowKeys=y
-AppNeedsTextInput=y
+AppNeedsArrowKeys=n
+AppNeedsTextInput=n
 AppUsesJoystick=n
 AppHandlesJoystickSensitivity=n
 AppUsesMultitouch=n
 NonBlockingSwapBuffers=n
 RedefinedKeys="SPACE"
-AppTouchscreenKeyboardKeysAmount=6
-AppTouchscreenKeyboardKeysAmountAutoFire=2
+AppTouchscreenKeyboardKeysAmount=0
+AppTouchscreenKeyboardKeysAmountAutoFire=0
 RedefinedKeysScreenKb="1 2 3 4 5 6 1 2 3 4"
 MultiABI=n
 AppVersionCode=101
