Updated Dosbox projects (thanks to Lubomyr)

--- a/project/jni/application/dosbox/AndroidAppSettings.cfg
+++ b/project/jni/application/dosbox/AndroidAppSettings.cfg
@@ -17,18 +17,18 @@ AppUsesJoystick=n
 AppHandlesJoystickSensitivity=n
 AppUsesMultitouch=n
 NonBlockingSwapBuffers=n
-RedefinedKeys="LCTRL RETURN KP_PLUS KP_MINUS LCTRL"
-AppTouchscreenKeyboardKeysAmount=0
+RedefinedKeys="SPACE RETURN PLUS MINUS F11 ESCAPE F5 F6 F7 F8"
+AppTouchscreenKeyboardKeysAmount=4
 AppTouchscreenKeyboardKeysAmountAutoFire=0
-RedefinedKeysScreenKb="LCTRL RETURN KP_PLUS KP_MINUS LCTRL"
+RedefinedKeysScreenKb="F11 F12 F9 F10"
 MultiABI=n
-AppVersionCode=07401
-AppVersionName="0.74.01"
-CompiledLibraries="jpeg png"
+AppVersionCode=07402
+AppVersionName="0.74.02"
+CompiledLibraries="jpeg png sdl_mixer sdl_net sdl_sound"
 CustomBuildScript=y
 AppCflags=''
 AppLdflags=''
 AppSubdirsBuild=''
-AppUseCrystaXToolchain=y
+AppUseCrystaXToolchain=n
 AppCmdline=''
 ReadmeText='^You may press "Home" now - the data will be downloaded in background'
