Optiuon to run video rendering in separate thread - available only for SW mode

--- a/project/jni/application/ballfield/AndroidAppSettings.cfg
+++ b/project/jni/application/ballfield/AndroidAppSettings.cfg
@@ -1,5 +1,5 @@
 # The application settings for Android libSDL port
-AppSettingVersion=16
+AppSettingVersion=17
 LibSdlVersion=1.2
 AppName="Ballfield"
 AppFullName=net.olofson.ballfield
@@ -9,6 +9,7 @@ AppDataDownloadUrl="Game data is 1 Mb|ballfield.zip"
 SdlVideoResize=y
 SdlVideoResizeKeepAspect=n
 NeedDepthBuffer=n
+SwVideoMode=y
 AppUsesMouse=y
 AppNeedsTwoButtonMouse=y
 AppNeedsArrowKeys=n
