--- a/project/jni/application/openttd/AndroidAppSettings.cfg
+++ b/project/jni/application/openttd/AndroidAppSettings.cfg
@@ -11,7 +11,7 @@ SdlVideoResizeKeepAspect=n
 NeedDepthBuffer=n
 AppUsesMouse=y
 AppNeedsTwoButtonMouse=y
-AppNeedsArrowKeys=y
+AppNeedsArrowKeys=n
 AppNeedsTextInput=y
 AppUsesJoystick=n
 AppHandlesJoystickSensitivity=n
@@ -22,8 +22,8 @@ AppTouchscreenKeyboardKeysAmount=0
 AppTouchscreenKeyboardKeysAmountAutoFire=0
 RedefinedKeysScreenKb="LALT RETURN KP_PLUS KP_MINUS SPACE DELETE KP_PLUS KP_MINUS 1 2"
 MultiABI=n
-AppVersionCode=10511
-AppVersionName="1.0.5.11"
+AppVersionCode=10512
+AppVersionName="1.0.5.12"
 CompiledLibraries="jpeg png freetype timidity lzma lzo2"
 CustomBuildScript=y
 AppCflags=''
