--- a/project/jni/application/vice/AndroidAppSettings.cfg
+++ b/project/jni/application/vice/AndroidAppSettings.cfg
@@ -1,14 +1,15 @@
 # The application settings for Android libSDL port
-AppSettingVersion=15
+AppSettingVersion=17
 LibSdlVersion=1.2
 AppName="ViceC64"
 AppFullName=org.viceteam.sdl
 ScreenOrientation=h
 InhibitSuspend=n
-AppDataDownloadUrl="Data size is 1 Mb|vice-data.zip"
+AppDataDownloadUrl="!Data size is 1 Mb|vice-2.3-data.zip"
 SdlVideoResize=y
 SdlVideoResizeKeepAspect=n
 NeedDepthBuffer=n
+SwVideoMode=y
 AppUsesMouse=n
 AppNeedsTwoButtonMouse=n
 AppNeedsArrowKeys=y
@@ -18,11 +19,12 @@ AppHandlesJoystickSensitivity=n
 AppUsesMultitouch=n
 NonBlockingSwapBuffers=n
 RedefinedKeys="LCTRL RETURN KP_PLUS KP_MINUS LCTRL"
-AppTouchscreenKeyboardKeysAmount=4
+AppTouchscreenKeyboardKeysAmount=3
 AppTouchscreenKeyboardKeysAmountAutoFire=0
+RedefinedKeysScreenKb="KP_PLUS RETURN LCTRL"
 MultiABI=n
-AppVersionCode=22001
-AppVersionName="svn23185"
+AppVersionCode=23000
+AppVersionName="2.3.0.00"
 CompiledLibraries="jpeg png"
 CustomBuildScript=y
 AppCflags=''
