Some user interface fixes for ChangeAppSettings.sh

--- a/project/jni/application/ballfield/AndroidAppSettings.cfg
+++ b/project/jni/application/ballfield/AndroidAppSettings.cfg
@@ -30,6 +30,5 @@ CustomBuildScript=n
 AppCflags='-O2 -finline-functions'
 AppLdflags=''
 AppSubdirsBuild=''
-AppUseCrystaXToolchain=n
 AppCmdline=''
-ReadmeText='^'
+ReadmeText='^Readme text'
