--- a/project/jni/application/ballfield/AndroidAppSettings.cfg
+++ b/project/jni/application/ballfield/AndroidAppSettings.cfg
@@ -2,7 +2,7 @@
 AppSettingVersion=17
 LibSdlVersion=1.2
 AppName="Ballfield"
-AppFullName=net.olofson.ballfield.v426
+AppFullName=net.olofson.ballfield
 ScreenOrientation=h
 InhibitSuspend=n
 AppDataDownloadUrl="Game data is 1 Mb|ballfield.zip"
